--- a/styles/style.css
+++ b/styles/style.css
@@ -13,7 +13,7 @@ body{
 /* banner section styles */
 
 .banner-container {
-    width: 1320px;
+    max-width: 1320px;
     margin: 0 auto;
     min-height: 600px;
     margin-top: 50px;
@@ -42,3 +42,46 @@ body{
     font-size: 72px;
     font-weight: 900;
 }
+
+/* 65%-section styles */
+
+.second-section-container {
+    width: 800px;
+    height: 806px;
+    margin: 0 auto;
+    border: 2px solid red;
+    margin-top: 120px;
+}
+.second-section-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.second-section-content h1 {
+    font-size: 81px;
+    font-weight: bold;
+    color: #FF0000;
+    font-family: Inter;
+}
+.second-section-content p {
+    color: rgb(255, 0, 0);
+    font-family: Inter;
+    font-size: 24px;
+    font-weight: 500;
+    margin-top: 48px;
+}
+.second-section-content h3 {
+    color: rgb(7, 2, 17);
+    font-family: Inter;
+    font-size: 48px;
+    font-weight: 700;
+    margin-top: 16px;
+}
+.second-section-img img{
+    width: 100%;
+    height: 100%;
+    margin-top: 48px;
+}
+
+
